--- a/templates/random.html
+++ b/templates/random.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Random Search</title>
-<link rel="stylesheet" href="{{url_for('static',filename='randomstyle.css')}}">
+<link rel="stylesheet" href="{{url_for('static',filename='style.css')}}">
 </head>
 <body>
 <h1>Flavor Finder</h1>
