--- a/static/style.css
+++ b/static/style.css
@@ -143,3 +143,21 @@ form p.suggestion-item {
     margin-bottom: 5px;
     cursor: pointer;
 }
+
+a.button {
+    display: inline-block;
+    font-family: Verdana, Geneva, sans-serif; /* Match the rest of your site */
+    background-color: green;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 6px;
+    text-decoration: none;
+    font-size: 1em;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+  }
+  
+  a.button:hover {
+    background-color: darkgreen;
+  }
+  
