--- a/templates/display_recipe.html
+++ b/templates/display_recipe.html
@@ -12,7 +12,7 @@
                  <li><a href="\">Home</a></li>
                  <li><a href="\search_by_title">Search by Recipe Title</a></li>
                  <li><a href="#">Search by Ingredients</a></li>
-                 <li><a href="#">Random Recipes</a></li>
+                 <li><a href="\random">Random Recipes</a></li>
                  <li><a href="#">All Recipes</a></li>
                  <li><a href="#">FAQ</a></li>
              </ul>
