--- a/templates/random.html
+++ b/templates/random.html
@@ -5,26 +5,27 @@
 <link rel="stylesheet" href="{{url_for('static',filename='style.css')}}">
 </head>
 <body>
-<h1>Flavor Finder</h1>
 
-<nav>
-    <ul>
-    <li><a href="/homepage">Home</a></li>
-    <li><a href="#search">Search</a></li>
-    <li><a href="/random">Random</a></li>
-    <li><a href="#all">All</a></li>
-    <li><a href="#faq">FAQ</a></li>
-    </ul>
-    </nav>
-
-<div>
+    <header>
+        <h1>Flavor Finder</h1>
+         <nav>
+             <ul>
+                 <li><a href="\">Home</a></li>
+                 <li><a href="\search_by_title">Search by Recipe Title</a></li>
+                 <li><a href="#">Search by Ingredients</a></li>
+                 <li><a class="highlight" href="\random">Random Recipes</a></li>
+                 <li><a href="#">All Recipes</a></li>
+                 <li><a href="#">FAQ</a></li>
+             </ul>
+         </nav>
+     </header>
 <h2>Random Search</h2>
 
 <p>Enter a number of recipes and click the button below to find a random flavor!</p>
 <form action="/random" method="POST">
     <label for="num_recipes">How many recipes?</label>
     <input type="text" id="ingredients" name="num_recipes" placeholder="Enter a number" required>
-    <button type="submit">Generate</button>
+    <input type="submit" name="submit" value="Generate">
   </form>
   
 </body>
