--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,7 +13,7 @@
                  <li><a href="\search_by_title">Search by Recipe Title</a></li>
                  <li><a href="#">Search by Ingredients</a></li>
                  <li><a href="/random">Random Recipes</a></li>
-                 <li><a href="#">All Recipes</a></li>
+                 <li><a href="/all_recipes">All Recipes</a></li>
                  <li><a href="#">FAQ</a></li>
              </ul>
          </nav>
