--- a/templates/recipelist.html
+++ b/templates/recipelist.html
@@ -17,7 +17,7 @@
             <li><a href="#faq">FAQ</a></li>
         </ul>
     </nav>
-        <h2>Your Random Recipes</h2>
+        <h2>Here are your recipes:</h2>
     {% if recipes %}
     <ul>
         {% for recipe in recipes %}
