--- a/templates/all_recipes.html
+++ b/templates/all_recipes.html
@@ -9,14 +9,14 @@
     <header>
         <h1>Flavor Finder</h1>
          <nav>
-             <ul>
-                 <li><a href="\">Home</a></li>
-                 <li><a href="\search_by_title">Search by Recipe Title</a></li>
-                 <li><a href="#">Search by Ingredients</a></li>
-                 <li><a href="\random">Random Recipes</a></li>
-                 <li><a class="highlight" href="\all_recipes">All Recipes</a></li>
-                 <li><a href="#">FAQ</a></li>
-             </ul>
+            <ul>
+                <li><a class="highlight" href="\">Home</a></li>
+                <li><a href="\search_by_title">Search by Recipe Title</a></li>
+                <li><a href="\custom">Search by Ingredients</a></li>
+                <li><a href="/random">Random Recipes</a></li>
+                <li><a href="/all_recipes">All Recipes</a></li>
+                <li><a href="#">FAQ</a></li>
+            </ul>
          </nav>
      </header>
 
