--- a/templates/recipelist.html
+++ b/templates/recipelist.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="{{ url_for('homepage') }}">Home</a></li>
             <li><a href="{{ url_for('search_by_title') }}">Search by Recipe Title</a></li>
-            <li><a href="#search">Search by Ingredients</a></li>
+            <li><a href="\custom">Search by Ingredients</a></li>
             <li><a href="{{ url_for('random') }}">Random Recipes</a></li>
             <li><a href="#all">All Recipes</a></li>
             <li><a href="#faq">FAQ</a></li>
