--- a/templates/random.html
+++ b/templates/random.html
@@ -8,14 +8,15 @@
 <h1>Flavor Finder</h1>
 
 <nav>
-    <ul>
-    <li><a href="/homepage">Home</a></li>
-    <li><a href="#search">Search</a></li>
-    <li><a href="/random">Random</a></li>
-    <li><a href="#all">All</a></li>
-    <li><a href="#faq">FAQ</a></li>
-    </ul>
-    </nav>
+  <ul>
+      <li><a href="\">Home</a></li>
+      <li><a href="\search_by_title">Search by Recipe Title</a></li>
+      <li><a href="#">Search by Ingredients</a></li>
+      <li><a class="highlight" href="\random">Random Recipes</a></li>
+      <li><a href="#">All Recipes</a></li>
+      <li><a href="#">FAQ</a></li>
+  </ul>
+</nav>
 
 <div>
 <h2>Random Search</h2>
