--- a/templates/recipelist.html
+++ b/templates/recipelist.html
@@ -9,12 +9,12 @@
     <h1>Flavor Finder</h1>
     <nav>
         <ul>
-            <li><a href="{{ url_for('homepage') }}">Home</a></li>
-            <li><a href="{{ url_for('search_by_title') }}">Search by Recipe Title</a></li>
-            <li><a href="#search">Search by Ingredients</a></li>
-            <li><a href="{{ url_for('random') }}">Random Recipes</a></li>
-            <li><a href="#all">All Recipes</a></li>
-            <li><a href="#faq">FAQ</a></li>
+            <li><a href="\">Home</a></li>
+            <li><a href="\search_by_title">Search by Recipe Title</a></li>
+            <li><a href="#">Search by Ingredients</a></li>
+            <li><a href="\random">Random Recipes</a></li>
+            <li><a href="#">All Recipes</a></li>
+            <li><a href="#">FAQ</a></li>
         </ul>
     </nav>
         <h2>Your Random Recipes</h2>
