--- a/templates/random.html
+++ b/templates/random.html
@@ -6,34 +6,19 @@
 </head>
 <body>
 
-<<<<<<< HEAD
-<nav>
-  <ul>
-      <li><a href="\">Home</a></li>
-      <li><a href="\search_by_title">Search by Recipe Title</a></li>
-      <li><a href="#">Search by Ingredients</a></li>
-      <li><a class="highlight" href="\random">Random Recipes</a></li>
-      <li><a href="#">All Recipes</a></li>
-      <li><a href="#">FAQ</a></li>
-  </ul>
-</nav>
-
-<div>
-=======
     <header>
         <h1>Flavor Finder</h1>
-         <nav>
-            <ul>
-                <li><a class="highlight" href="\">Home</a></li>
-                <li><a href="\search_by_title">Search by Recipe Title</a></li>
-                <li><a href="\custom">Search by Ingredients</a></li>
-                <li><a href="/random">Random Recipes</a></li>
-                <li><a href="/all_recipes">All Recipes</a></li>
-                <li><a href="#">FAQ</a></li>
-            </ul>
-         </nav>
+        <nav>
+          <ul>
+              <li><a href="\">Home</a></li>
+              <li><a href="\search_by_title">Search by Recipe Title</a></li>
+              <li><a href="\custom">Search by Ingredients</a></li>
+              <li><a class = "highlight" href="\random">Random Recipes</a></li>
+              <li><a href="\all_recipes">All Recipes</a></li>
+              <li><a href="#">FAQ</a></li>
+          </ul>
+      </nav>
      </header>
->>>>>>> cee012196baea194f31f467e13c7041b72edc2fb
 <h2>Random Search</h2>
 
 <p>Enter a number of recipes and click the button below to find a random flavor!</p>
