--- a/templates/search.html
+++ b/templates/search.html
@@ -8,10 +8,12 @@
     <h1>Custom Search</h1>
     <nav>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#custom">Custom</a></li>
-            <li><a href="#random">Random</a></li>
-            <li><a href="#all">All</a></li>
+            <li><a href="\">Home</a></li>
+            <li><a href="\search_by_title">Search by Recipe Title</a></li>
+            <li><a class="highlight" href="\custom">Search by Ingredients</a></li>
+            <li><a href="\random">Random Recipes</a></li>
+            <li><a href="\all_recipes">All Recipes</a></li>
+            <li><a href="#">FAQ</a></li>
         </ul>
     </nav>
     <div class="include"></div>
