adding new landing page

--- a/templates/custom.html
+++ b/templates/custom.html
@@ -43,7 +43,7 @@
             <div class="ingredient-container" id="exclude-container"></div>
         </div>
         
-        <button type="submit" id="submit-btn">Search Recipes</button>
+        <input type="submit" name="submit" value="Search">
     </form>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 
