--- a/templates/recipelist.html
+++ b/templates/recipelist.html
@@ -31,11 +31,10 @@
                 {% endfor %}
             </ul>
             {% else %}
-            <p>No recipes to show. Try changing your search or generating random recipes.</p>
+            <p>No recipes to show. Try generating more recipes.</p>
             {% endif %}
 
     <a href="\random" class="button">Generate Random Recipes</a>
-    <a href="\custom" class="button">Search Recipes</a>
 
 </body>
 </html>
