--- a/templates/recipelist.html
+++ b/templates/recipelist.html
@@ -24,8 +24,8 @@
             <ul>
                 {% for recipe in recipes %}
                 <li>
-                    <a href="{{ url_for('display_recipe', recipe_id=recipe[0]) }}">
-                        {{ recipe[1] }}
+                    <a href="/display_recipe/{{recipe.get_id()}}">
+                        {{ recipe.get_title() }}
                     </a>
                 </li>
                 {% endfor %}
