--- a/templates/display_recipe.html
+++ b/templates/display_recipe.html
@@ -7,16 +7,15 @@
 <body>
     <header>
         <h1>Flavor Finder</h1>
-         <nav>
+        <nav>
             <ul>
-                <li><a class="highlight" href="\">Home</a></li>
+                <li><a href="\">Home</a></li>
                 <li><a href="\search_by_title">Search by Recipe Title</a></li>
                 <li><a href="\custom">Search by Ingredients</a></li>
-                <li><a href="/random">Random Recipes</a></li>
-                <li><a href="/all_recipes">All Recipes</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="\random">Random Recipes</a></li>
+                <li><a href="\all_recipes">All Recipes</a></li>
             </ul>
-         </nav>
+        </nav>
      </header>
 
     <div>
