--- a/templates/custom.html
+++ b/templates/custom.html
@@ -8,12 +8,11 @@
     <h1>Flavor Finder</h1>
     <nav>
         <ul>
-            <li><a class="highlight" href="\">Home</a></li>
+            <li><a href="\">Home</a></li>
             <li><a href="\search_by_title">Search by Recipe Title</a></li>
-            <li><a href="\custom">Search by Ingredients</a></li>
-            <li><a href="/random">Random Recipes</a></li>
-            <li><a href="/all_recipes">All Recipes</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a class="highlight" href="\custom">Search by Ingredients</a></li>
+            <li><a href="\random">Random Recipes</a></li>
+            <li><a href="\all_recipes">All Recipes</a></li>
         </ul>
     </nav>
     <form id="search-form" method="POST" action="{{ url_for('custom_search') }}">
