--- a/templates/all_recipes.html
+++ b/templates/all_recipes.html
@@ -14,7 +14,7 @@
                 <li><a href="\search_by_title">Search by Recipe Title</a></li>
                 <li><a href="\custom">Search by Ingredients</a></li>
                 <li><a href="\random">Random Recipes</a></li>
-                <li><a class="highlight" href="\all_recipes">All Recipes</a></li>
+                <li><a class="{{highlight}}" href="\all_recipes">All Recipes</a></li>
             </ul>
         </nav>
      </header>
