--- a/templates/search_by_title.html
+++ b/templates/search_by_title.html
@@ -26,7 +26,7 @@
     <div>
         <form method="POST" action="/find_recipe_by_title">
             <label for="recipe_title">Recipe Title:</label>
-            <input id="recipe_search" type="text" name="recipe_title" placeholder="Enter recipe title">
+            <input id="recipe_search" type="text" name="recipe_title" placeholder="Enter recipe title" autocomplete="off">
             {% if last_search %}
                 <p id="search_error_message">Unfortunately "{{ last_search }}" does not exist in our database. Please try again.</p>
             {% endif %}
