--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -26,7 +26,7 @@
     <div class="highlight">
         <h2>Featured Recipe</h2>
         <p>Here is the featured recipe for today!</p>
-        <a href="/display_recipe/{{featured_recipe.get_id()}}">{{featured_recipe.get_title()}}</a>
+        <a href="/display_recipe/{{featured_recipe.get_id()}}" class = recipe-link>{{featured_recipe.get_title()}}</a>
     </div>
 
     <div>
