--- a/templates/random.html
+++ b/templates/random.html
@@ -23,7 +23,7 @@
 <p>Enter a number of recipes and click the button below to find a random flavor!</p>
 <form action="/random" method="POST">
     <label for="num_recipes">How many recipes?</label>
-    <input type="text" id="ingredients" name="num_recipes" placeholder="Enter a number" required>
+    <input type="text" id="num_recipes" name="num_recipes" placeholder="Enter a number" required>
     <input type="submit" name="submit" value="Generate">
   </form>
   
