added toast images

--- a/templates/all_recipes.html
+++ b/templates/all_recipes.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <header>
+        <a href="/big_toast">
+            <img src="/static/toast.png" alt="Flavor Finder Logo" class="logo">
+        </a>
         <h1>Flavor Finder</h1>
         <nav>
             <ul>
