--- a/templates/search_by_title.html
+++ b/templates/search_by_title.html
@@ -6,6 +6,9 @@
 
 <body>
     <header>
+        <a href="/big_toast">
+            <img src="/static/search_toast.png" alt="Flavor Finder Logo" class="logo">
+        </a>
         <h1>Flavor Finder</h1>
         <nav>
             <ul>
