--- a/templates/random.html
+++ b/templates/random.html
@@ -7,6 +7,9 @@
 <body>
 
     <header>
+        <a href="/big_toast">
+            <img src="/static/random_toast.png" alt="Flavor Finder Logo" class="logo">
+        </a>
         <h1>Flavor Finder</h1>
         <nav>
             <ul>
