--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -54,7 +54,8 @@
     <div class="highlight">
         <h2>Featured Recipe</h2>
         <br>
-        <img src="static/present.png" alt="Present" class="present-img" style="width: 200px; height: auto;">
+        <img src="static/present.png" alt="Present" class="present-img">
+        <br>
         <a href="/display_recipe/{{featured_recipe.get_id()}}" class = recipe-link>{{featured_recipe.get_title()}}</a>
         <br><br>
     </div>
