--- a/templates/display_recipe.html
+++ b/templates/display_recipe.html
@@ -25,7 +25,7 @@
         <h2>{{recipe_title}}</h2>
     </div>
     <div>
-        <h3>Ingredients:</h3>
+        <h3 class="recipe_header">Ingredients:</h3>
         <ul>
             {% for ingredient in recipe_ingredients %}
                 <li>{{ ingredient }}</li>
@@ -33,7 +33,7 @@
         </ul>
     </div>
     <div>
-        <h3>Instructions:</h3>
+        <h3 class="recipe_header">Instructions:</h3>
         <ol>
             {% for instruction in recipe_instructions %}
                 <li>{{ instruction }}</li>
