--- a/templates/custom.html
+++ b/templates/custom.html
@@ -32,7 +32,7 @@
             <input type="text" 
                    id="include-input"
                    class="ingredient-input"
-                   placeholder="Type ingredients to include (press Enter)"
+                   placeholder="Press Enter after each ingredient"
                    autocomplete="off">
             <div class="ingredient-container" id="include-container"></div>
         </div>
@@ -43,7 +43,7 @@
             <input type="text"
                    id="exclude-input"
                    class="ingredient-input"
-                   placeholder="Type ingredients to exclude (press Enter)"
+                   placeholder="Press Enter after each ingredient"
                    autocomplete="off">
             <div class="ingredient-container" id="exclude-container"></div>
         </div>
