--- a/templates/no_recipes_found.html
+++ b/templates/no_recipes_found.html
@@ -21,6 +21,7 @@
     <div>
         <h2>No Recipes Found That Match Your Search Criteria</h2>
         <br>
+        <p>Don't forget to press enter after each ingredient!</p>
         <a href="\custom" class="button">Try Again</a>
     </div>
 </body>
