--- a/templates/search_by_title.html
+++ b/templates/search_by_title.html
@@ -1,6 +1,6 @@
 <html> 
 <head>
-<title>Serach by Recipe Title</title>
+<title>Search by Recipe Title</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 
