--- a/static/style.css
+++ b/static/style.css
@@ -211,7 +211,7 @@ form input[type="text"] {
 }
 
 form input[type="submit"] {
-    background-color: rgb(81, 137, 186);
+    background-color: var(--primary-color);
     color: white;
     padding: 10px 15px;
     border: none;
@@ -221,7 +221,7 @@ form input[type="submit"] {
 }
 
 form input[type="submit"]:hover {
-    background-color: rgb(0, 67, 100);
+    background-color: var(--secondary-color);
 }
 
 form p {
